--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,8 @@
     border-radius: 10px;
     padding: 10px 10px 10px 10px;
     display: grid;
-    place-items: center;   
+    place-items: center; 
+    margin-bottom: 2rem;  
 }
 
 .child {
@@ -25,14 +26,14 @@
 }
 
 .formedit {
-    margin-top: 165px;
+    margin-top: 100px;
     display: flex;
     align-content: stretch;
     place-items: center;
 }
 
 .formedit-signin {
-    margin-top: 105px;
+    margin-top: 100px;
     display: flex;
     align-content: stretch;
     place-items: center;
@@ -64,11 +65,13 @@
 }
 
 .header {
-    margin-top: 20px;
-    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: none;
     color: antiquewhite;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: xx-large;
+    display: grid;
+    place-items: center;
 }
 
 .header-extra {
@@ -77,7 +80,7 @@
     color: antiquewhite;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: xx-large;
-    padding-left: 50px;
+    padding-left: 35px;
     margin-bottom: auto;
 }
 
@@ -164,7 +167,17 @@
 }
 
 .header2 {
-    font-size: x-large;
+    font-size: large;
     color: antiquewhite;
     transition: color 1s ease-in-out;
+}
+.empty {
+    margin-bottom: 100px;
+}
+
+.posttemplate {
+    color: rgb(33, 37, 41);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: medium;
+    cursor: text;
 }
