--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <footer class="py-3 my-4">
+    <footer class="py-3 my-4 fixed-bottom bg-dark">
       <ul class="nav justify-content-center border-bottom border-light pb-3 mb-2">
         <!-- <li class="nav-item">
           <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
@@ -26,7 +26,7 @@
       <div class="text-center">
         <p class="text-light">
           copyright 2023,
-          <a href="https://github.com/rokarioss">Rokari builds</a>, The Allen Group
+          <a href="https://github.com/rokarioss">Rokari builds</a>, TechTalk Inc&#174;.
         </p>
       </div>
     </footer>
