--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,17 +1,17 @@
-=<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web | Sign Up</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body class="body">
-    <div class="header">
-        Sign Up for BlogPost
-    </div>
     <div class="parent">
         <div class="child">
+            <div class="header">
+                Sign Up for TechTalk.ng
+            </div>
             <div class="formedit">
                 <form action="{{ url_for('welcome') }}">
                     <div class="email-entry">
