--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,17 @@
 .body {
-    background-color: rgb(33, 37, 41);
+    /* background-color: rgb(33, 37, 41); */
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('./pic1.png');
     display: grid;
     place-items: center;
 }
 
 .parent {
     margin-top: 55px;
-    background-color: gray;
+    /* background-color: rgb(214, 186, 115); */
     height: 400px;
     width: 400px;
     border-radius: 10px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 5px;
     display: grid;
     place-items: center; 
     margin-bottom: 2rem;  
@@ -18,6 +19,7 @@
 
 .child {
     background-color: rgb(33, 37, 41);
+    opacity: 80%;
     height: 390px;
     width: 390px;
     /* margin: 0% 10px; */
