--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <footer class="py-3 my-4 fixed-bottom bg-dark">
+    <footer class="py-3 my-4 ">
       <ul class="nav justify-content-center border-bottom border-light pb-3 mb-2">
         <!-- <li class="nav-item">
           <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
