--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -12,13 +12,17 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/bootstrap.css.map') }}"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+    />
   </head>
   <style>
     html {
       scroll-behavior: smooth;
     }
   </style>
-  <body class="bg-dark">
+  <body class="body">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -26,7 +30,7 @@
     ></script>
     {% include 'nav.html' %}
 
-    <div class="container rounded-2 bg-dark-subtle">
+    <div class="container rounded-2 ">
       {% include 'post.html' %}
     </div>
 
