--- a/templates/write.html
+++ b/templates/write.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | TechTalk.ng</title>
+    <title>Post | TechTalk.ng</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/bootstrap.css') }}"
