--- a/templates/post.html
+++ b/templates/post.html
@@ -18,6 +18,9 @@
       ></textarea>
       <label for="floatingTextarea2">Write Post Here</label>
     </div>
+    <div class="post-button">
+      <a href="{{ url_for('blog') }}"><input onclick=" " class="post-button" type="button" value="Post"></a>
+    </div>
   </div>
 <div class="empty"></div>
 </div>
