--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,14 +1,15 @@
-<nav id="navbar" class="navbar navbar-dark bg-dark fixed-top border-bottom border-light" aria-label="First navbar example">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<nav id="navbar" class="navbar navbar-dark fixed-top border-bottom border-light" aria-label="First navbar example">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">TechTalk.ng</a>
+    <a class="navbar-brand text-light" href="{{ url_for('blog') }}">TechTalk.ng</a>
     <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="navbar-collapse collapse bg-dark" id="navbarsExample01" style="border-radius: 20px; margin-top: 15px;">
+    <div class="navbar-collapse collapse  p-3" id="navbarsExample01" style="border-radius: 20px; margin-top: 15px;">
       <ul class="navbar-nav me-auto mb-2">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{ url_for('signup') }}">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="{{ url_for('signup') }}">Home</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="#"></a>
@@ -17,11 +18,11 @@
           <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
         </li>
         <li class="nav-item dropdown ">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">See More</a>
+          <a class="nav-link dropdown-toggle text-light" href="#" data-bs-toggle="dropdown" aria-expanded="false">See More</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li><a class="dropdown-item" href="#">Find Users</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item text-light" href="#">Profile</a></li>
+            <li><a class="dropdown-item text-light" href="#">Find Users</a></li>
+            <li><a class="dropdown-item text-light" href="#">Something else here</a></li>
           </ul>
         </li>
       </ul>
