image background update

--- a/static/css/templatemo-stand-blog.css
+++ b/static/css/templatemo-stand-blog.css
@@ -12,7 +12,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('./pic1.png');;
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('./pic21.jpeg');;
   
 }
 p {
