--- a/static/css/templatemo-stand-blog.css
+++ b/static/css/templatemo-stand-blog.css
@@ -6,6 +6,9 @@ https://templatemo.com/tm-551-stand-blog
 
 */
 
+* {
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body {
   font-family: 'Roboto', sans-serif;
   overflow-x: hidden;
@@ -56,12 +59,12 @@ h1,h2,h3,h4,h5,h6 {
 
 .page-heading {
 	margin: 0px 10px;
-	padding: 120px 0px;
+	padding: 10px 10px 10px 10px;
 	text-align: left;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-image: url(../images/heading-bg.jpg);
+	/* background-image: url(../images/heading-bg.jpg); */
 }
 
 .page-heading .text-content h4 {
@@ -167,7 +170,8 @@ header {
 	z-index: 99999;
 	width: 100%;
 	height: 100px;
-	background-color: #f7f7f7;
+	background-color: rgb(53, 65, 97);
+	opacity: none;
 	-webkit-transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
     -o-transition: all 0.3s ease-in-out 0s;
@@ -220,9 +224,11 @@ header .navbar {
 }
 #navbarResponsive {
 	z-index: 999;
+	/* background-color: rgb(53, 65, 97); */
 }
 .navbar-collapse {
 	text-align: center;
+	/* background-color: rgb(53, 65, 97); */
 }
 .navbar .navbar-nav .nav-item {
 	margin: 0px 15px;
@@ -248,7 +254,7 @@ header .navbar {
 }
 .navbar .navbar-toggler {
 	border-color: #fff;
-	background-color: #f48840;	
+	background-color: rgb(53, 65, 97);	
 	height: 46px;
 	outline: none;
 	border-radius: 0px;
@@ -258,7 +264,7 @@ header .navbar {
 }
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
-	color: #fff;
+	color: #f7f7f7;
 	font-size: 18px;
 	line-height: 30px;
 	font-family: 'FontAwesome';
@@ -691,7 +697,7 @@ ul.page-numbers li a:hover {
 	text-transform: uppercase;
 	font-weight: 900;
 	letter-spacing: 0.5px;
-	color: #20232e;
+	color: antiquewhite;
 	border-bottom: 1px solid #eee;
 	padding-bottom: 15px;
 	margin-bottom: 25px;
@@ -717,6 +723,7 @@ ul.page-numbers li a:hover {
 	margin-bottom: 15px;
 	padding-bottom: 15px;
 	border-bottom: 1px solid #eee;
+	color: #121212;
 }
 
 .sidebar .recent-posts ul li:last-child {
@@ -728,7 +735,7 @@ ul.page-numbers li a:hover {
 .sidebar .recent-posts ul li h5 {
 	font-size: 19px;
 	font-weight: 900;
-	color: #20232e;
+	color: antiquewhite;
 	line-height: 30px;
 	transition: all 0.3s;
 }
@@ -755,7 +762,7 @@ ul.page-numbers li a:hover {
 .sidebar .categories ul li a {
 	font-size: 15px;
 	font-weight: 700;
-	color: #20232e;
+	color: antiquewhite;
 	transition: all .3s;
 }
 
@@ -794,12 +801,13 @@ ul.page-numbers li a:hover {
 footer {
 	margin-top: 100px;
 	text-align: center;
-	background-color: #20232e;
-	padding: 60px 0px;
+	/* background-color: #6f84d1; */
+	opacity: 90%;
+	padding: 10px 10px 10px 10px;
 }
 
 footer ul.social-icons {
-	padding-bottom: 60px;
+	padding-bottom: 10px;
 	margin-bottom: 60px;
 	border-bottom: 1px solid rgba(250,250,250,0.15);
 }
@@ -1039,8 +1047,9 @@ footer p a:hover {
 	    left: 0;
 	    width: 100%;
 	    text-align: center;
-	    background-color: #fff;
-	    box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+	    background-color: rgb(53, 65, 97);
+		/* opacity: 90%; */
+	    /* box-shadow: 0px 10px 10px rgba(0,0,0,0.1); */
 	}
 	.navbar .navbar-nav .nav-item {
 		border-bottom: 1px solid #eee;
