--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,12 +5,12 @@
     place-items: center;
 }
 
-@media screen and (max-max-width: 390px) {
+@media screen and (max-width: 300px) {
   
     .parent,
     .child,
     .body {
-        max-width: 40%;
+        max-width: 100%;
     }
 }
 
@@ -36,22 +36,18 @@
     transition:  1s ease-in-out;
     display: grid;
     place-items: center;
-    padding: 10px 10px 10px 10px;
+    /* padding: 30px 30px 30px 30px ; */
 }
 
 .formedit {
-    margin-top: 100px;
+    /* margin-top: 100px; */
     /* display: grid;
     /* align-content: stretch; */
+    padding: 10px 10px ;
     place-items: center;
 }
 
-.formedit-signin {
-    margin-top: 100px;
-    /* display: grid;
-    /* align-content: stretch; */
-    /* place-items: center; */ 
-}
+
 
 .text{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -83,7 +79,7 @@
     color: antiquewhite;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: x-large;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 5px 5px 5px;
     display: grid;
     place-items: center;
 }
@@ -96,7 +92,7 @@
     font-size: x-large;
     /* padding-left: 35px; */
     padding: 5px 10px 5px 10px;
-    margin-bottom: auto;
+    /* margin-bottom: auto; */
 }
 
 .e1 {
@@ -171,10 +167,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.parent:hover .signinbtn {
+/* .parent:hover .signinbtn {
     background-color: black;
     color: white;
-}
+} */
 
 .signinbtn {
     border: none #ccc;
