--- a/templates/signin.html
+++ b/templates/signin.html
@@ -13,31 +13,30 @@
 </head>
 
 <body class="body">
-    <div class="parent">
-        <div class="child">
-            <div class="header-extra">
-                Sign in to TechTalk.ng
-            </div>
-            <div class="formedit-signin">
-                <form id="signin" action="{{ url_for('welcome') }}" class="js-form">
-                    <div class="email-entry">
-                        <label class="e1" for="email">Username:</label>
-                        <!-- <span class="input-group-addon" id="basic-addon1">@</span> -->
-                        <input placeholder="Enter Username" name="username" class="e1Entry" type="email">
-                    </div>
-                    </br>
-                    <div class="pass-entry">
-                        <label for="password" class="e1">Password:</label>
-                        <input placeholder="Pick a Good Password" name="password" class="e1Pass" type="password">
-                        <br>
-                        <div class="btn-center">
-                            <button id="smb" type="submit" onclick="collectFormData()" class="btn-smb">Sign In</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+  <div class="parent">
+    <div class="child">
+        <div class="header">
+            Sign In To TechTalk.ng
+        </div>
+        <div class="formedit">
+            <form action="{{ url_for('welcome') }}" id="form-control" class="js-form">
+                <div class="email-entry">
+                    <label class="e1" for="email">Username:</label>
+                    <!-- <span class="input-group-addon" id="basic-addon1">@</span> --><br>
+                    <input placeholder="Enter Your Email" class="e1Entry" type="email">
+                </div>
+                </br>
+                <div class="pass-entry">
+                    <label for="password" class="e1">Password:</label><br>
+                    <input placeholder="Enter Password" class="e1Pass" type="password">
+                    <div class="btn-center"><button id="smb" type="submit" class="btn-smb">Sign In</button></div>
+
+                </div>
+                <script src="{{ url_for('static', filename='js/functions.js') }}"></script>
+            </form>
         </div>
     </div>
+</div>
 <script src="{{ url_for('static', filename='js/functions.js') }}"></script>
 <div class="alternate">
     <h3 class="header2">You New Here?</h3>
@@ -45,27 +44,25 @@
     <a href="{{ url_for('signup') }}"><input class="signinbtn" type="button" value="Sign Up"></a>
 </div>
 <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="social-icons">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Behance</a></li>
-            <li><a href="#">Linkedin</a></li>
-            <li><a href="#">Dribbble</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-12">
-          <div class="copyright-text">
-            <p>Copyright 2020 Stand Blog Co.
-                  
-               | Design: <a rel="nofollow" href="https://templatemo.com" target="_parent">TemplateMo</a></p>
-          </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <ul class="social-icons">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <!-- <li><a href="#">Behance</a></li> -->
+          <li><a href="#">Linkedin</a></li>
+          <!-- <li><a href="#">Dribbble</a></li> -->
+        </ul>
+      </div>
+      <div class="col-lg-12">
+        <div class="copyright-text">
+          <p>Copyright 2023, <a href="">Rokari Builds</a>, TechTalk inc &#174;</p>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 </body>
 
 </html>
